stop buttons jumping around

--- a/src/views/App.scss
+++ b/src/views/App.scss
@@ -381,7 +381,7 @@ button {
       @media only screen and (max-width: 800px) {
         width: 45px;
         height: 45px;
-        top: -24px;
+        top: -18px;
       }
     
       box-sizing: border-box;
